# timebalancer

./: README.md  hello.py  main.py  pyproject.toml
.github/workflows/: python-package.yml
config/: __init__.py  setting.py  settings.py
interface/: __init__.py  excercise_selector.py  pomodoro.py  task_handler.py  taskhandler.py  timer.py
tests/: test_pomodoro_timer.py  test_settings.py
